# ChangeLog for app-editors/nano
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.246 2010/02/11 08:41:17 vapier Exp $

*nano-2.2.3 (11 Feb 2010)

  11 Feb 2010; Mike Frysinger <vapier@gentoo.org> +nano-2.2.3.ebuild:
  Version bump.

*nano-2.2.2 (18 Jan 2010)

  18 Jan 2010; Mike Frysinger <vapier@gentoo.org> +nano-2.2.2.ebuild:
  Version bump.

*nano-2.2.1 (13 Dec 2009)

  13 Dec 2009; Mike Frysinger <vapier@gentoo.org> +nano-2.2.1.ebuild:
  Version bump.

*nano-2.2.0 (30 Nov 2009)

  30 Nov 2009; Mike Frysinger <vapier@gentoo.org> +nano-2.2.0.ebuild:
  Version bump.

*nano-2.1.11 (02 Nov 2009)

  02 Nov 2009; Mike Frysinger <vapier@gentoo.org> +nano-2.1.11.ebuild,
  +files/nano-2.1.11-proto.patch:
  Version bump.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> nano-2.1.10.ebuild:
  Marking nano-2.1.10 ppc64 for bug 287407

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> nano-2.1.10.ebuild:
  Stable for HPPA (bug #287407).

  04 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> nano-2.1.10.ebuild:
  Stable for ppc, bug 287407

  04 Oct 2009; Raúl Porcel <armin76@gentoo.org> nano-2.1.10.ebuild:
  alpha/arm/ia64/m68k/s390/sh/x86 stable wrt #287407

  03 Oct 2009; Tiago Cunha <tcunha@gentoo.org> nano-2.1.10.ebuild:
  stable sparc, bug 287407

  03 Oct 2009; Romain Perier <mrpouet@gentoo.org>
  nano-2.1.10.ebuild:
  Stable for amd64 per bug #287407.

  31 Aug 2009; Brent Baude <ranger@gentoo.org> nano-2.1.9.ebuild:
  Marking nano-2.1.9 ppc64 for bug 281269

  29 Aug 2009; nixnut <nixnut@gentoo.org> nano-2.1.9.ebuild:
  ppc stable #281269

  25 Aug 2009; Jeroen Roovers <jer@gentoo.org> nano-2.1.9.ebuild:
  Stable for HPPA (bug #281269).

  14 Aug 2009; Raúl Porcel <armin76@gentoo.org> nano-2.1.9.ebuild:
  alpha/arm/ia64/m68k/s390/sh/x86 stable wrt #281269

  13 Aug 2009; Tiago Cunha <tcunha@gentoo.org> nano-2.1.9.ebuild:
  stable sparc, bug 281269
