@@ -11,5 +11,5 @@ DIST nano-2.2.3.tar.gz 1528017 RMD160 b940db998367d55df92e08c26ddc30d8f05ed70c S
 EBUILD nano-1.3.12-r1.ebuild 2057 RMD160 02dc97ca75f649164e30bed8717753ce10aecffb SHA1 ce5f9fa4b64ebdc9a0daca69a314114ead76e9e3 SHA256 cdc153255f259b522da70daca7045f35c64859c71c14fa23a553d4e95032eb9e
 EBUILD nano-2.1.10.ebuild 2264 RMD160 9a5a6fb80ceeaf66647d9930a3acf48eec16ab96 SHA1 765f2a26db2286f96deed53db7e66e535703a9ef SHA256 d08db09b8abc67770f28a345603a169e5e5156a2a929455724ef4110ff5deb31
 EBUILD nano-2.2.3.ebuild 2263 RMD160 bbf154153ef7b451f0b1640106967e7d4757e0ce SHA1 e79038d9453b54f52081bcded0646f0be2b80ce6 SHA256 9ca145370349fa80024cd26178745d9805b602c337c15dd73a0e9a20a74c9c26
-MISC ChangeLog 28666 RMD160 a91f1412751cfe2cbeadb97cd93e0f251c9769e8 SHA1 17439d199abbef81b4635ca3caf33b8a72f35845 SHA256 b9ac92999e98694fef6c78a0b0f5ed85ce4a3bed1e8bc205eb998faf6ae8d095
-MISC metadata.xml 1055 RMD160 5ef8d82cdf250abb5cffa58383c7b4d50f81d155 SHA1 4026434ab09a45edff0543c2c20e0fd20e6c03ed SHA256 8cbe9b49592bc79d362fd390c5d5b1782c0765c6f88a91aa199858ad73dec408
+MISC ChangeLog 28791 RMD160 d28c87df8b7b5b67e1c9e3a8593668057beec373 SHA1 bdecee20f1771dd4c7bbc240df4ffd85067213a7 SHA256 804d3127d91e3df1ce51dc4db86432d0bae1ba0a0c0f983c2095a9511c629fa4
+MISC metadata.xml 1389 RMD160 92f10b7a951e99f48ddb2d0cc6eb4180e74a767b SHA1 9b951125e7fb7cd153eb7fd2693ef52846246b7a SHA256 6cd7072175c18846c4c3b0e16db652a5a29ba18eff7e8f2aeb28e7f74017ee0b
