@@ -23,6 +23,14 @@ Pico as closely as possible while addressing the problems above and
 perhaps providing other extra functionality.
 </longdescription>
 <use>
-  <flag name='justify'>Toggle the justify option</flag>
+ <flag name='justify'>Enable justify/unjustify functions for text formatting.</flag>
+ <flag name='debug'>
+  Enable debug messages and assert warnings.  Note that these will all be sent
+  straight to stderr rather than some logging facility.
+ </flag>
+ <flag name='minimal'>
+  Disable all fancy features, including ones that otherwise have a dedicated
+  USE flag (such as spelling).
+ </flag>
 </use>
 </pkgmetadata>
