@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/nano
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.246 2010/02/11 08:41:17 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.247 2010/03/07 06:27:55 vapier Exp $
+
+  07 Mar 2010; Mike Frysinger <vapier@gentoo.org> metadata.xml:
+  Extend USE="debug minimal" flags by Doktor Notor #306653.
 
 *nano-2.2.3 (11 Feb 2010)
 
